webview/style.css
html {
  --ligatures: normal;
  --tab-size: 4;
  --container-background-color: #abb8c3;
  --box-shadow: rgba(0, 0, 0, 0.55) 0px 20px 68px;
  --container-padding: 3em;
  --window-border-radius: 4px;
  box-sizing: border-box;
}
body {
  padding-top: 32px;
  display: flex;
  flex-flow: column;
  align-items: center;
  font-variant-ligatures: var(--ligatures);
  tab-size: var(--tab-size);
  user-select: none;
}
#snippet-container {
  display: flex;
  justify-content: center;
  align-items: center;
  overflow: hidden;
  padding: var(--container-padding);
  background-color: var(--container-background-color);
}
#window {
  display: flex;
  flex-direction: column;
  border-radius: var(--window-border-radius);
  box-shadow: var(--box-shadow);
  overflow: hidden;
  resize: horizontal;
  min-width: 100px;
  padding: 18px;
  background-color: var(--vscode-editor-background);
}
#navbar {
  overflow: hidden;
  margin-bottom: 15px;
  display: flex;
  justify-content: space-between;
}
.navbar-controls {
  display: flex;
}
#snippet {
  max-width: 100%;
  white-space: pre-wrap;
  word-break: break-all;
  color: var(--vscode-editor-foreground);
  background-color: var(--vscode-editor-background);
  font-family: var(--vscode-editor-font-family);
  font-size: calc(var(--vscode-editor-font-size) * 1px);
  font-weight: var(--vscode-editor-font-weight);
}
.line {
  display: flex;
}
.line-number {
  text-align: right;
  color: var(--vscode-editorLineNumber-foreground);
  margin-right: 18px;
  width: var(--line-number-width);
}
.line-code {
  flex: 1;
  display: flex;
  flex-wrap: wrap;
}
#save-container {
  margin-top: 40px;
  margin-bottom: 60px;
  text-align: center;
}
.dot {
  width: 15px;
  height: 15px;
  border-radius: 50%;
  margin-right: 10px;
}
.red {
  background-color: #ff5f5a;
}
.yellow {
  background-color: #ffbe2e;
}
.green {
  background-color: #2aca44;
}
.obturateur {
  width: 64px;
  height: 64px;
}
.obturateur * {
  transition: stroke 0.4s;
}
.obturateur:not(.filling) path {
  opacity: 0.5;
}
.size-test {
  font-family: var(--vscode-editor-font-family) !important;
  font-size: calc(var(--vscode-editor-font-size) * 1px) !important;
  display: inline-block;
}
#flash-fx {
  display: none;
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background: white;
  transition: opacity 200ms ease;
  opacity: 1;
}

